@@ -2,6 +2,9 @@
 
 	* check_dbmail_message.c, dbmail-message.c, dbmail-message.h, 
 	  modules/sortsieve.c:
+	make dbmail_message_get_header_repeated case-insensitive
+	* check_dbmail_message.c, dbmail-message.c, dbmail-message.h, 
+	  modules/sortsieve.c:
 	redone dbmail_message_get_header_repeated
 
 2006-06-05  Aaron Stone  <aaron@serendipity.cx>
